# slub

./: 20040725  README.md  dumpOSC  index.html  init.sh  mesh  start.sh
c/: foo.c  foo.h
datadirt/: Makefile  audio.c  audio.h  config.h  datadirt  datadirt.c  datadirt.dsp  datadirt.erp  datadirt.jack  datadirt.works  effects.c  externs.h  queue.c  server.c  test.pl
lab/: bar.pl  closure.pl  foo.pl  make.pl  pat.pl  sin.pl  test
lc/: 22:46:23-12890  22:46:23-12890,v  archive.scar  elf  feedback.pl  foo  freedback.pl  launch.sh  old  test2  testosc.pl  testosc2.pl  testosc3.pl  tick.pl
lc/RCS/: foo,v
lc/bap/: cup  (+3 more)
new/: Makefile  effects.c  example_client  example_client.c  foo  queue.h  start  start.c  startdsp0  startdsp2  test
new/osc/libOMC_dirty/: Makefile  Makefile.in  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  cscope.out  libtool
new/osc/libOMC_dirty/autom4te.cache/: output.0  requests  traces.0
new/osc/libOMC_dirty/src/: Makefile  Makefile.am  Makefile.in  NetworkReturnAddress.c  OSC-address-space.c  OSC-address-space.h  OSC-priority-queue.c  OSC-receive.c
new/osc/libOMC_dirty/test/: testOSC.c
rd04/: dorkbeep.aif  schedule.txt  schedule.yaml.foo  test.pl  tm.pl
samples/: check.sh
sc/: bbtest.sc  broken.sc  erp.txt  minimum.sc  osctest.sc  saw.sc  simple.sc
shots/: 1851-0  1851-1  1851-2  1851.doc  1851.html  20424-0  shot2html.pl
synthdefs/: system_link_audio_1.scsyndef  system_link_audio_2.scsyndef  system_link_control_1.scsyndef  system_link_control_2.scsyndef
text/: agent.txt
(+1239 files in other folders)
